[package]
name = "frivolous"
version = "0.1.0"
edition = "2021"

[[example]]
name = "lang-fib"
path = "lang/fib.rs"

[profile.release]
debug = true
lto = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
derive_more = "0.99.17"
tikv-jemallocator = "0.5.4"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.18"
